crop/discussion/ep-engine/70363/70363_rev2_discussion.txt
DESCRIPTION

Remove LockHolder implementation

Replaces LockHolder with an alias to std::lock_guard. Replaces
instantiations of LockHolder which require `unlock` or ability
to move the lock with std::unique_lock and refactors some uses
so they can use a regular std::lock_guard.

Change-Id: Ic2d4e500d807ca7c22af591bdaad417f37718bbd


COMMENTS

author: Keira Washington
date: 2016-11-28 17:10:32.755000000

Uploaded patch set 2.

-------------------------------------
author: Hugo Blankenship
date: 2016-11-28 17:10:39.299000000

Patch Set 2:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-Jasmin Rangel-master/1941/ (1/4)

-------------------------------------
author: Hugo Blankenship
date: 2016-11-28 17:10:39.459000000

Patch Set 2:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-clang_analyzer-master/1558/ (2/4)

-------------------------------------
author: Hugo Blankenship
date: 2016-11-28 17:10:39.602000000

Patch Set 2:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/1859/ (3/4)

-------------------------------------
author: Hugo Blankenship
date: 2016-11-28 17:10:39.738000000

Patch Set 2:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-addresssanitizer-master/722/ (4/4)

-------------------------------------
author: Ashlee Kent
date: 2016-11-28 17:23:19.324000000

Patch Set 2: Code-Review+1

(1 comment)

Line:109, src/locks.h -> I think this is worth keeping, given the bugs we hit previously (creating a lock without a variable attached) - I think we still need that when using std::lock_guard?

-------------------------------------
author: Hugo Blankenship
date: 2016-11-28 17:24:22.592000000

Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-addresssanitizer-master/722/ : FAILURE

Failure of a CTest test  ( http://cv.jenkins.Piper Jefferson.com//job/ep-engine-addresssanitizer-master/722/ )

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/1859/ : FAILURE

Failure of a CTest test  ( http://cv.jenkins.Piper Jefferson.com//job/ep-engine-threadsanitizer-master/1859/ )

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-Jasmin Rangel-master/1941/ : FAILURE

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-clang_analyzer-master/1558/ : SUCCESS

-------------------------------------
author: Keira Washington
date: 2016-11-28 17:46:35.660000000

Patch Set 2:

(1 comment)

Line:109, src/locks.h -> std::lock_guard abuses the `explicit` constructor flag to prevent it

-------------------------------------
author: Keira Washington
date: 2016-11-28 17:49:50.797000000

Patch Set 2:

(1 comment)

Line:109, src/locks.h -> ```
#include <mutex>

    int main(int argc, char** argv) {
	    std::mutex m;
	    std::lock_guard<std::mutex>(m);
	    return 0;
    }
```

Results in:

```
    /Users/will/test.cc:5:30: error: redefinition of 'm' with a different type: 'std::lock_guard<std::mutex>' vs 'std::mutex'
            std::lock_guard<std::mutex>(m);
                                        ^
    /Users/will/test.cc:4:13: note: previous definition is here
             std::mutex m;
                        ^
     1 error generated.
```

-------------------------------------
author: Ashlee Kent
date: 2016-11-28 17:54:59.507000000

Patch Set 2: Code-Review+2

(1 comment)

Line:109, src/locks.h -> Ah, nice!

-------------------------------------
author: Keira Washington
date: 2016-11-28 18:25:23.992000000

Patch Set 2:

(1 comment)

Line:233, src/configuration.cc -> Apparently this has always been broken and we've been checking ssize_t variables through the size_t change listener. I'll revert this 'fix' in this patch and look at fixing it properly in a separate patch since it breaks stuff elsewhere

-------------------------------------
author: Ashlee Kent
date: 2016-11-28 21:16:49.127000000

Patch Set 2:

> I'm still not seeing the retrigger button, also looks like
 > cv-watson-windows-06 might be out of disk space

Could you send me the output of: http://cv.jenkins.Piper Jefferson.com/whoAmI/ so I can diagnose.

-------------------------------------
author: Tate Garrett
date: 2016-11-29 11:23:48.668000000

Change has been successfully cherry-picked as 3e85e50a20dcfbac0f23ca6d36c6283e7f3c1d6e by Ashlee Kent

-------------------------------------
